--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,384 @@
+/* Box sizing reset */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 html {
-  background: #0025ff;
-  color: #fff;
+  color: black;
+  font-size: 1em;
+  line-height: 1.4em;
+  font-family:
+}
+
+/*** GLobal Styles ***/
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  color: #404040;
+}
+
+ul,
+ol {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 5em;
+  line-height: 2;
+  font-weight: 600;
+}
+
+h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.875em;
+  line-height: 1.6;
+  font-weight: 600;
+}
+
+h3 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.1625em;
+  line-height: 1.5;
+  font-weight: 600;
+}
+
+p {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 0.9em;
+  line-height: 1.2;
+  padding: 10px 0;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: #404040;
+}
+
+img {
+  width: 100%;
+}
+
+.content-wrapper {
+  width: 90%;
+  margin: 10px 0;
+}
+
+/********** MOBILE STYLES **********/
+
+/* Header */
+header {
+  display: flex;
+  justify-content: center;
+  color: #404040;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 1.2em;
+  text-transform: uppercase;
+}
+
+header img {
+  height: 60px;
+  width: 60px;
+  margin: 10px 0;
+}
+
+header .content-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-flow: row wrap;
+  margin: 0;
+}
+
+.hamburger {
+  cursor: pointer;
+}
+
+.hamburger svg {
+  width: 40px;
+  height: 30px;
+  fill: #fff;
+}
+
+header nav ul {
+  display: none;
+}
+
+/* Hero Area */
+.hero {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url('../img/hero-image-2.jpg');
+  background-size: cover;
+  background-position: center;
+  color: white;
+  padding: 20px 0;
+}
+
+.hero h1 {
+  font-size: 2.5rem;
+  line-height: 1.3;
+}
+
+/* Featured Trends */
+.featured-trends {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.featured-trends .content-wrapper {
+  display: flex;
+  flex-direction: column;
+  /* Stacking the trend divs on top of each other */
+  gap: 20px;
+  /* Gap between trend divs */
+}
+
+.trend {
+  background-color: white;
+  padding: 20px;
+  border: 1px solid #ddd;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: flex;
+  /* Flex container for image and text */
+  flex-direction: column;
+  /* Stacking image and text vertically */
+}
+
+.trend img {
+  max-width: 100%;
+  margin-bottom: 10px;
+  /* Space between image and text */
+}
+
+.trend a {
+  font-size: 0.8em;
+}
+
+/* Designer Spotlight */
+.designer-spotlight {
+  display: flex;
+  justify-content: center;
+}
+
+.designer-spotlight h2 {
+  padding: 0 0 20px 20px;
+  line-height: 1.3;
+  width: 100%;
+}
+
+.designer-spotlight p {
+  padding: 10px 20px;
+}
+
+.designer-spotlight img {
+  padding: 20px;
+}
+
+/* Gallery Section */
+.design-gallery {
+  display: flex;
+  justify-content: center;
+  padding: 10px 0;
+}
+
+.design-gallery .content-wrapper {
+  display: grid;
+  gap: 20px;
+  /* Gap between grid items */
+}
+
+.gallery-item {
+  background-color: white;
+  padding: 10px;
+  border: 1px solid #ddd;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  cursor: pointer;
+}
+
+/* About */
+.about-us {
+  display: flex;
+  justify-content: center;
+}
+
+.about-us h2 {
+  padding-top: 30px;
+}
+
+/* Footer */
+footer {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 20px;
+  margin-top: 80px;
+}
+
+.back-to-top {
+  padding: 20px 0;
+  font-weight: 600;
+}
+
+.copyright {
+  font-size: 0.8em;
+}
+
+/********** TABLET STYLES **********/
+
+@media only screen and (min-width: 768px) {
+
+  h2 {
+    font-size: 2.25em;
+    line-height: 1.6;
+  }
+
+  h3 {
+    font-size: 1.5em;
+    line-height: 1.5;
+  }
+
+  p {
+    font-size: 1em;
+    line-height: 1.3;
+  }
+
+  /* Header */
+  header img {
+    height: 80px;
+    width: 80px;
+    margin: 15px 0;
+  }
+
+  .hamburger {
+    display: none;
+  }
+
+  header nav ul {
+    display: flex;
+  }
+
+  .nav-list li {
+    margin-right: 20px;
+  }
+
+  /* Hero Area */
+  .hero {
+    padding: 150px 0;
+  }
+
+  .hero h1 {
+    font-size: 3rem;
+  }
+
+  /* Featured Trends */
+  .featured-trends .content-wrapper {
+    flex-direction: row;
+  }
+
+  .trend {
+    flex-direction: column;
+    /* Positioning image and text side by side */
+    align-items: flex-start;
+    /* Align content at the top */
+    text-align: left;
+    flex-basis: 50%;
+  }
+
+  /* Designer Spotlight */
+  .designer-spotlight article {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .designer-spotlight article figure,
+  .designer-spotlight article div {
+    width: 49%;
+  }
+
+  .designer-spotlight br {
+    display: none;
+  }
+
+  /* Gallery Section */
+  .design-gallery .content-wrapper {
+    grid-template-columns: repeat(2, 1fr);
+    /* 2 columns on tablet */
+    margin-top: 15px;
+  }
+
+  .gallery-item {
+    height: auto;
+    /* Adjust the height as needed */
+  }
+
+  .image-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
+
+  .gallery-item img {
+    max-width: 100%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  figcaption {
+    position: absolute;
+    bottom: 0;
+    background-color: #ffffffcc;
+    width: 100%;
+    padding: 10px;
+    text-align: center;
+  }
+
+  /* Footer */
+  .copyright {
+    font-size: 1em;
+  }
+
+
+}
+
+/********** DESKTOP STYLES **********/
+@media only screen and (min-width: 1200px) {
+
+  h3 {
+    font-size: 1.875em;
+    line-height: 1.5;
+  }
+
+  header img {
+    height: 100px;
+    width: 100px;
+    margin: 20px 0;
+  }
+
+  .hero h1 {
+    font-size: 5rem;
+  }
+
+  /* Gallery Section */
+  .design-gallery .content-wrapper {
+    grid-template-columns: repeat(4, 1fr);
+    /* 2 columns on tablet */
+  }
+
 }
