--- a/code/style.css
+++ b/code/style.css
@@ -1,6 +1,6 @@
 html {
-  background: #333;
-  color: brown;
+  background: #9d463e;
+  color: #fff;
 }
 
 /* UTILITIES */
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-  font-family: cursive;
+  font-family: arial;
 }
 
 a {
@@ -25,10 +25,11 @@ li {
 /* NAVBAR STYLING STARTS */
 .navbar {
   display: flex;
+  font-family: arial;
   align-items: center;
   justify-content: space-between;
   padding: 20px;
-  background-color: teal;
+  background-color: #9d463e;
   color: #fff;
 }
 
@@ -38,7 +39,11 @@ li {
 
 /* LOGO */
 .logo {
-  font-size: 32px;
+  font-size: 40px;
+  font-style: oblique;
+  font-stretch: extra-condensed;
+  font-family: Times, serif;
+  color: #fff
 }
 
 /* NAVBAR MENU */
@@ -49,7 +54,7 @@ li {
 }
 
 .menu li:hover {
-  background-color: #4c9e9e;
+  background-color: #bd716a;
   border-radius: 5px;
   transition: 0.3s ease;
 }
@@ -71,6 +76,7 @@ input[type=checkbox] {
   display: none;
   font-size: 24px;
   user-select: none;
+  color: #fff
 }
 
 /* APPLYING MEDIA QUERIES */
@@ -78,11 +84,15 @@ input[type=checkbox] {
   .menu {
     display: none;
     position: absolute;
-    background-color: teal;
+    background-color: #9d463e;
     right: 0;
     left: 0;
     text-align: center;
     padding: 16px 0;
+  }
+
+  .menu li:hover {
+    background-color: #bd716a;
   }
 
   .menu li+li {
@@ -102,81 +112,136 @@ input[type=checkbox] {
 /*END OF HEADER*/
 
 /*START OF GRID*/
+/*ON COMPUTER SIZED SCREENS*/
 
 .grid-parent {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: 500px 400px 300px 300px 200px 300px;
-  background-color: #fff;
+  height: fit-content;
+  background-color: #9d463e;
   gap: 20px;
 }
 
 .grid-item {
-  background-color: rgb(240, 172, 78);
+  background-color: #bd716a;
+  text-align: center;
+  font-size: 18px;
+  padding: 50px;
+  margin-bottom: 20px;
 }
 
 .grid-a {
   grid-column: span 6;
 }
 
+h1 {
+  font-size: 50px;
+  padding: 30px;
+  padding-top: 50px;
+}
+
+h2 {
+  font-size: 25px;
+  padding: 40px;
+}
+
+.venice1 {
+  max-width: 90%;
+  padding: 30px;
+}
+
 .grid-b {
   grid-column: 1 / 4;
+}
+
+.helsinki {
+  float: center;
+  width: 460px;
+  height: 350px;
+  object-fit: cover;
+  padding: 30px;
+}
+
+a {
+  color: #fff;
 }
 
 .grid-c {
   grid-column: 4 / 7;
 }
 
+.venice2 {
+  float: center;
+  width: 460px;
+  height: 350px;
+  object-fit: cover;
+  padding: 30px;
+}
+
 .lonly {
   grid-column: span 6;
+  background-color: #9d463e;
+  font-size: 30px;
+  padding: 70px;
 }
 
 .grid-d {
   grid-column: 1 / 3;
 }
 
+.croatia {
+  float: center;
+  width: 320px;
+  height: 500px;
+  object-fit: cover;
+  padding: 30px;
+}
+
 .grid-e {
   grid-column: 3 / 5;
+}
+
+.sardinia {
+  float: center;
+  width: 320px;
+  height: 500px;
+  object-fit: cover;
+  padding: 30px;
 }
 
 .grid-f {
   grid-column: 5 / 7;
 }
 
+.barcelona {
+  float: center;
+  width: 320px;
+  height: 500px;
+  object-fit: cover;
+  padding: 30px;
+}
+
 .grid-g {
   grid-column: span 6;
+  place-items: center;
 }
-
-.grid-h {
-  grid-column: 1 / 3;
-}
-
-.grid-i {
-  grid-column: 3 / 5;
-}
-
-.grid-j {
-  grid-column: 5 / 7;
-}
-
-
-
 
 
 /*FOOTER*/
 
 footer {
-  background-color: #212121;
-  padding: 5rem 1.5rem;
+  background-color: #9d463e;
+  padding: 3rem 1.5rem;
 }
 
 li {
   font-family: Arial;
   text-transform: uppercase;
+  color: #fff;
 }
 
 ul {
-  color: black;
+  color: rgb(127, 58, 2);
   margin: 0;
   display: flex;
   flex-direction: row;
@@ -184,3 +249,20 @@ ul {
   align-items: center;
   justify-content: space-evenly;
 }
+
+@media screen and (max-width: 1024px) {
+
+  /* GRID STYLE UNDER 1024PX*/
+  /* Change display to block for mobile layout */
+
+  .grid-parent {
+    display: block;
+    box-sizing: border-box;
+    grid-template-columns: 1fr;
+  }
+
+  .grid-item {
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 20px;
+  }
