--- a/code/style.css
+++ b/code/style.css
@@ -3,7 +3,6 @@ html {
   color: #cdc3a4;
 }
 
-/* UTILITIES */
 * {
   margin: 0;
   padding: 0;
@@ -93,8 +92,6 @@ input[type=checkbox] {
     transition: 0.3s ease;
   }
 
-  /*NOT WORKING*/
-
   .menu li+li {
     margin-top: 20px;
   }
@@ -107,7 +104,6 @@ input[type=checkbox] {
     display: block;
   }
 
-  /*why is the font size not changing?*/
   ul {
     text-align: center;
     font-size: 20px;
@@ -116,10 +112,11 @@ input[type=checkbox] {
   .navbar {
     padding: 50px;
   }
+
 }
 
 
-/*footer*/
+/*FOOTER*/
 footer {
   background-color: #606453;
   padding: 2rem 0rem 2rem 0rem;
@@ -128,7 +125,6 @@ footer {
 ul {
   gap: 3em;
   font-size: 30px;
-
 }
 
 li:hover {
@@ -154,29 +150,11 @@ li:hover {
 }
 
 
-/*footer above*/
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /*GRID STARTS HERE*/
 .grid-parent {
   display: grid;
   grid-template-columns: repeat(8, 1fr);
-  background-color: #787d68;
+  background-color: #fff;
   gap: 30px;
   height: fit-content;
 }
@@ -188,67 +166,114 @@ li:hover {
   padding: 10px;
   overflow: hidden;
   display: flex;
-  /* Optional: to center content within the item */
   flex-direction: column;
-  /* Optional: to stack content vertically */
   align-items: center;
-  /* Optional: to horizontally center content */
-  /* Prevent content overflow */
 }
 
-/* If you want to add scrollbars when content overflows */
 .grid-item.scrollable {
   overflow: auto;
 }
 
-
 .grid-one {
   grid-column: span 8;
-  background-color: #787d68;
-  color: #cdc3a4;
-  margin-top: 100px;
-  font-family: 'Playfair Display';
-  ;
+  background-color: #cdc3a4;
 }
 
-h1 {
-  font-weight: 100;
-  font-size: 6vw;
-}
-
-.sidebar {
-  grid-column: 1 / 3;
+.article-one {
+  max-width: 90%;
   border-style: solid;
 }
 
-
-.sidebar-image {
-  /* No need to specify grid-column here */
-  max-width: 100%;
-  height: auto;
+h1 {
+  padding-top: 150px;
+  font-size: 6vw;
+  color: #f8f6ee
 }
 
-.sidebar-text {
-  /* This text is in column 1 */
-  /* Additional styles for the text */
+p {
+  padding-bottom: 50px;
+  font-size: 3vw;
+  font-family: 'Playfair Display';
+  color: #f8f6ee;
+}
+
+p9 {
+  padding: 30px;
+  font-size: 2vw;
+  font-family: 'Playfair Display';
+  color: #cdc3a4;
+}
+
+h9 {
+  padding: 50px 0px;
+  font-size: 3vw;
+  font-family: 'Playfair Display';
+  color: #cdc3a4;
+}
+
+
+.article-two {
+  padding-top: 20px;
+  max-width: 80%;
+  max-height: 100%;
+}
+
+h2 {
+  padding-top: 40px;
+  font-size: 5vw;
+  font-family: 'Playfair Display';
+}
+
+h3 {
+  padding-top: 40px;
+  font-size: 10px;
+  font-family: 'Playfair Display';
+}
+
+.sidebar {
+  grid-column: 1 / 4;
+}
+
+.article-sidebar {
+  padding-bottom: 40px;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .grid-two {
-  grid-column: 3 / 9;
-}
-
-.grid-three {
-  grid-column: 1 / 9;
+  grid-column: 4 / 9;
+  border-style: solid;
 }
 
 .grid-four {
   grid-column: 1 / 3;
-  font-size: 10px;
-  /*HOW TO KEEP TEXT AND PICS INSIDE GRIDCELL????*/
+  border: solid;
+}
+
+p4 {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-size: 3vw;
+  font-family: 'Playfair Display';
+  color: #5a4041;
+}
+
+p44 {
+  padding-top: 5px;
+  padding-bottom: 20px;
+  font-size: 1.7vw;
+  font-family: 'Playfair Display';
+  color: #5a4041;
 }
 
 .grid-five {
   grid-column: 3 / 5;
+}
+
+.article-pumpk {
+  padding-top: 15px;
+  max-width: 99%;
+  max-height: 99%;
 }
 
 .grid-six {
@@ -263,73 +288,40 @@ h1 {
   grid-column: span 8;
 }
 
+h8 {
+  padding-top: 40px;
+  font-size: 5vw;
+}
+
+p8 {
+  padding: 7px;
+  font-size: 2vw;
+  color: #cdc3a4;
+}
+
+p7 {
+  padding: 15px;
+  font-size: 1vw;
+  color: #5a4041;
+}
+
+.article-beauty {
+  padding-top: 20px;
+  max-width: 100%;
+  max-height: 100%;
+}
+
 @media screen and (max-width: 1024px) {
 
-  /* Grid styles -------------------------------------------------*/
+  /* GRID STYLES */
   .grid-parent {
     display: block;
     box-sizing: border-box;
     grid-template-columns: 1fr;
-    /* Change display to block for mobile layout */
   }
 
   .grid-item {
     width: 100%;
-    /* Each grid item takes up the full width */
     margin-bottom: 20px;
-    /* Add some space between grid items */
 
     /*GRID STOPS HERE*/
-
-    .first-section-box {
-      padding: 20px;
-      background-color: bisque;
-    }
-
-    .big-news {
-      font-size: 15px;
-      background-color: #e646c8;
-    }
-
-    .daily-news {
-      font-size: 15px;
-      background-color: pink;
-    }
-
-    .flex-parent {
-      height: fill;
-      display: flex;
-      justify-content: center;
-    }
-
-    .flex-child {
-      margin: 10px;
-      width: 250px;
-      height: 250px;
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-    }
-
-    .red {
-      background: #6d5a64;
-    }
-
-    .blue {
-      background: blue;
-    }
-
-    img {
-      width: 100px;
-      height: 80px;
-    }
-
-    button {
-      height: 52px;
-      display: block;
-      padding: 10px 20px;
-      border: 1px solid;
-      background: snow;
-      color: #ff69b4;
-      font-size: 10px;
-    }
