--- a/code/style.css
+++ b/code/style.css
@@ -3,21 +3,6 @@ html {
   color: #fff;
 }
 
-@media screen and (max-width:667px) {
-  body {
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(12, 1fr);
-  }
-  nav {
-    flex-wrap: wrap;
-    justify-content: center;
-    grid-row-start: 3;
-  }
-  .big-news {
-    grid-row-start: 5;
-  }
-}
-
 header {
   display: flex;
   height: 200px;
@@ -241,6 +226,7 @@ h6 {
   color:rgb(155, 153, 153);
   text-align: right;
   font-size: 20px;
+  margin-top: 12px;
   margin-bottom: 0px;
   margin-right: 10px;
 }
@@ -257,9 +243,104 @@ h6 {
   flex-direction: column;
   padding: 10px;
   grid-column: 3 / span 2;
-  grid-row: 3 / span 7;
+  grid-row: 3 / span 6;
   margin-right: 10px;
   border: solid rgba(167, 170, 179, 0.3);
   border-radius: 5px;
   text-align: right;
+}
+
+@media screen and (max-width:667px) {
+  body {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(12, 150px);
+  }
+  header {
+    max-width: 100%;
+    background-color: transparent;
+    border: transparent;
+  }
+  img {
+    max-width: 100%;
+  }
+  nav {
+    justify-content: center;
+    grid-row-start: 3;
+    grid-column: 1 / span 1;
+  }
+  .big-news {
+    grid-row: 4 / span 5;
+    grid-column: 1 / span 1;
+    font-size: 14px;
+  }
+  .news-grid {
+    display: flex;
+    flex-direction: column;
+    grid-row: 10 / span 5;
+    justify-content: flex-start;
+    align-items: center;
+    grid-column: 1 / span 1;
+  }
+  .grid-cell {
+    max-width: 100%;
+  }
+  .about {
+    font-size: 16px;
+    grid-column: 1 / span 1;
+    grid-row: 4 / span 6;
+  }
+  .about img {
+    width: 35%;
+  }
+  .archive {
+    grid-column: 1 / span 1;
+    grid-row: 4 / span 6;
+    font-size: 13px;
+  }
+}
+
+@media screen and (min-width:668px) and (max-width:1024px) {
+  body {
+    grid-template-columns: 2fr;
+    grid-template-rows: repeat(12, 200px);
+  }
+  header {
+    max-width: 100%;
+    background-color: transparent;
+    border: transparent;
+  }
+  .big-news {
+    grid-row: 4 / span 4;
+    grid-column: 1 / span 2;
+    font-size: 22px;
+  }
+  img {
+    max-width: 100%;
+  }
+  nav {
+    justify-content: center;
+    grid-row-start: 3;
+    grid-column: 1 / span 2;
+  }
+  .news-grid {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    grid-row: 9 / span 6;
+    justify-content: flex-start;
+    align-items: flex-start
+  }
+  .grid-cell {
+    max-width: 100%;
+  }
+  .about {
+    font-size: 19px;
+    grid-column: 1 / span 2;
+    grid-row: 4 / span 5;
+  }
+  .archive {
+    grid-column: 1 / span 2;
+    grid-row: 4 / span 5;
+    font-size: 16px;
+  }
 }
