--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,166 @@
+
 html {
-  background: #0025ff;
-  color: #fff;
+  background-color: #ffeedd;
+  font-family: Helvetica, sans-serif;
+}
+h1{
+ margin: 0;
+}
+h2{
+  font-size: 30px;
+}
+h3{
+  font-size: 20px;
+}
+.link {
+  text-decoration: none;
+}
+.link:hover {
+  color: #ff9900;
+}
+
+
+.header {
+  background-color: #ffeedd; 
+  color: #ff9900;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 20px;
+}
+.logo img {
+  height: 90px;
+  width: auto; 
+  margin-right: 20px;
+}
+.menu-toggle {
+  display: none; 
+  cursor: pointer;
+}
+.menu-icon {
+  font-size: 40px;
+  margin-right: 20px;
+  display: none; 
+}
+.menu {
+  display: flex;
+  align-items:flex-end; 
+}
+.menu a {
+  color: #ff9900;
+  text-decoration: none;
+  padding: 2px;
+  font-weight: bold;
+}
+.menu a:hover{
+  color: black;
+}
+
+
+/*MENU NAVBAR SMALL*/
+@media (max-width: 768px) {
+  .menu-toggle {
+      display: block; 
+  }
+  .checkbox{
+    display: none;
+  }
+  .menu-icon{
+   display: block;
+  }
+  .menu-icon:hover{
+    color: black;
+  }
+  .menu {
+      display: none; 
+  }
+  .menu-toggle:checked + .menu {
+      display: flex;
+      flex-direction: column;
+      position: absolute;
+      top: 90px;
+      right: 20px;
+      background-color:#ffeedd;
+      border: 1px solid #ff9900;
+      border-radius: 5px;
+      padding: 20px;
+      z-index: 1;
+  }
+}
+
+/*TICKER*/
+.ticker {
+  animation-name: scroll;
+  animation-duration: 10s;
+  position: relative;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  white-space: nowrap;
+  display: inline-block;
+  padding-right: 100%;
+}
+.ticker:hover{
+  animation-play-state: paused;
+  cursor: pointer;
+}
+@keyframes scroll{
+  0%{ left: 100%;}
+  100%{ left: -80%;}
+}
+
+/* BIG NEWS SECTION!*/
+.big-news {
+  position: relative;
+}
+.big-news img {
+  width: 100%;
+  height: auto;
+}
+.big-news-content {
+  position: absolute;
+  bottom: 20%;
+  left: 10%;
+  right: 10%;
+  padding: 10px;
+  background-color: rgba(255, 238, 221, 0.5) ;
+  border-radius: 5px;
+}
+
+/*BIG NEW SMALL*/
+@media (max-width: 768px) {
+  .big-news img {
+    object-fit: cover;
+    object-position: 100% 0;
+    height: 300px;
+    position:relative;
+    transform: translateY(0%);
+  }
+}
+
+/* THIS IS THE ARTICLE SECTION*/
+.article-section {
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr))
+}
+.article-news {
+  padding: 1rem;
+  box-sizing: border-box;
+  border: 1px #ff9900 solid;
+  border-radius: 5px;
+
+}
+.article-section img {
+  width: 100%;
+  height: 15rem;
+  object-fit: cover;
+}
+
+/*THIS IS THE FOOTER*/
+footer {
+  color: #ff9900;
+  background-color: #ffeedd;
+  padding: 10px;
+  text-align: center;
+  width: 100%;
 }
